ensure more spacing between all lines by setting a default font-size and line-height

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -323,8 +323,10 @@
 	}
 	#post section.body{
 		margin-bottom:15px;
+		font-size:1.2em;
+		line-height:1.5;
 	}
-	#post section.body p{margin:16px 0;line-height:1.5;font-size:1.2em;}
+	#post section.body p{margin:16px 0;}
 	/*fix with jQuery*/
 	#post section.body img{
 		margin:1.6em 0;
